--- a/Web_HP/Web_HP/Views/Home/Chanteurs.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Chanteurs.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    Layout = "_Layout";
-}
+﻿
 @{
     ViewData["Title"] = "Chanteurs";
 }
@@ -24,7 +22,7 @@
 <script>
     $(document).ready(function() {
         // Make HTTP request to API endpoint
-        $.get("api/Chanteurs", function(chanteurs) {
+        $.get("api/chanteurs", function(chanteurs) {
             // Iterate through chanteurs and render in cards
             chanteurs.forEach(function(chanteur) {
                 var chanteurCard = `
